<resources>
    <string name="app_name">Por los jóvenes</string>
    <string name="login">Ingresar</string>
    <string name="login_guest">Continuar como invitado</string>
    <string name="forgot_password">¿Olvido su contraseña?</string>
    <string name="dont_have_account">¿No tienes una cuenta? Regístrate</string>
    <string name="sign_up">Registrarse</string>
    <string name="must_type_email_password">Debe ingresar email y contraseña</string>
    <string name="wrong_email_or_password">El email o la contraseña son incorrectos</string>
    <string name="must_fill_all_fields">Debe completar todos los campos</string>
    <string name="must_type_email">Debe ingresar un email</string>
    <string name="wrong_email_format">Formato de email no válido</string>
    <string name="passwords_do_not_match">Las contraseñas no coinciden.</string>
    <string name="send">Enviar</string>
    <string name="change">Cambiar</string>
    <string name="new_password_sent">Se ha enviado un e-mail con una nueva contraseña.</string>
    <string name="password_changed_successfully_login">La contraseña se cambio con éxito. Debe volver a loguearse.</string>
    <string name="password_changed_successfully">La contraseña se cambio con éxito.</string>
    <string name="back">Volver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_activity">Actividad</string>
    <string name="nav_events">Eventos</string>
    <string name="nav_sponsors">Alianzas</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_initiatives">Iniciativas</string>
    <string name="sure_logout">¿Esta seguro que desea cerrar sesión?</string>
    <string name="current_distance_tracked">DISTANCIA ACTUAL RECORRIDA</string>
    <string name="current_amount_collected">DONACIÓN TOTAL</string>
    <string name="thanks">¡GRACIAS!</string>
    <string name="together_collected">JUNTOS DONAMOS</string>
    <string name="finish_run">Finalizar actividad</string>
    <string name="want_finish_run">¿Desea finalizar la actividad?</string>
    <string name="want_finish_run_no_internet">¿Desea finalizar la actividad?\nEn este momento no hay conexión a internet. Los datos no serán enviados</string>
    <string name="want_discard_run">La donación debe ser mayor a cero. ¿Deseas descartar esta actividad?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="donate_more">Donar más</string>
    <string name="run_in_progress">Actividad en progreso</string>
    <string name="permission_rationale">Los datos de localización son utilizados para medir distancias.</string>
    <string name="permission_denied_explanation">El permiso es necesario para el funcionamiento de la aplicación.</string>
    <string name="allow">Permitir</string>
    <string name="settings">Ajustes</string>
    <string name="api_generic_error">Ocurrio un error al conectarse al servidor. Compruebe su conexión a internet.</string>
    <string name="location_disabled_message">La localización debe estar activada para medir la distancia recorrida.</string>
    <string name="enable">Activar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="want_sing_in_event">¿Desea inscribirse en el evento?</string>
    <string name="want_sing_in_event_already_singed">Al inscribirse en este evento abandonará su evento actual. ¿Desea inscribirse en el evento?</string>
    <string name="want_sing_out_event">¿Desea abandonar el evento?</string>
    <string name="error_signing_in_event">Ocurrio un error al inscribirse al evento</string>
    <string name="error_signing_out_event">Ocurrio un error al abandonar el evento</string>

    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_current_password">Contraseña actual</string>
    <string name="hint_new_password">Nueva contraseña</string>
    <string name="hint_new_password_confirm">Confirmar nueva contraseña</string>

    <string name="distance_format">%.03f km</string>
    <string name="founds_collected_format">$ %.02f</string>

    <string name="header_title_initiatives">TRANSFORMÁ TUS PASOS EN\nEDUCACIÓN</string>
    <string name="header_title_events">TRANSFORMÁ TUS PASOS EN\nEDUCACIÓN</string>
    <string name="nav_donate_more">Doná</string>
    <string name="joined">Inscripto</string>0
    <string name="exit">Salir</string>
    <string name="join">Inscribir</string>
    <string name="discard">Descartar</string>
    <string name="to_continue">Continuar</string>
    <string name="donation">Donación</string>
    <string name="retry">Reintentar</string>
    <string name="error_initial_config">La calidad de tu conexión no es buena.</string>
    <string name="error_connection">Verifique su conexión y vuelva a intentarlo.</string>
    <string name="nav_history">Historial</string>
    <string name="pending_workout">Actividad pendiente de envio.</string>
    <string name="pending_workouts">Actividades pendiente de envio.</string>
    <string name="sent_workouts">Actividades enviadas.</string>

</resources>
