<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/trama_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:paddingLeft="@dimen/login_margin"
            android:paddingRight="@dimen/login_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_workout_result_logo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/thanks"
                style="@style/workout_result_together_collected"/>

            <TextView
                android:id="@+id/tv_workout_result_together_collected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawablePadding="8dp"
                android:text="@string/together_collected"
                style="@style/workout_result_together_collected"/>

            <TextView
                android:id="@+id/tv_workout_result_collected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/workout_result_amount_collected"/>

            <TextView
                android:id="@+id/tv_workout_result_distance_traveled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawablePadding="8dp"
                android:paddingTop="24dp"
                android:paddingBottom="32dp"
                style="@style/workout_result_together_collected"/>

            <Button
                android:id="@+id/btn_workout_result_donate_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate_more"
                android:theme="@style/secondary_color_button"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>